# joel-rs

./: .credo.exs  .gitignore  Cargo.toml  Procfile  README.md  app.json  mix.exs  settings.toml.example
config/: config.exs
lib/joel/: application.ex  consumer.ex  embeds.ex  intelligence.ex
lib/joel/commands/: joel.ex  leave.ex  pause.ex  play.ex  resume.ex  stop.ex  ttj.ex
src/: handler.rs  main.rs
src/commands/: joel.rs  leave.rs  mod.rs  pause.rs  play.rs  playing.rs  queue.rs  resume.rs  skip.rs  stop.rs
