[package]
name = "music-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[dependencies.serenity]
default-features = false
features = ["gateway", "cache", "framework", "standard_framework", "voice", "rustls_backend"]
version = "0.11.4"

[dependencies.tokio]
version = "1.19.2"
features = ["macros", "rt-multi-thread"]

[dependencies.songbird]
version = "0.3.0"
features = ["builtin-queue", "yt-dlp"]