[package]
name = "joel-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
songbird = { version = "0.3.2", features = ["builtin-queue", "yt-dlp"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "gateway",
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "rustls_backend",
] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
anyhow = "1.0.71"
rand = "0.8.5"
